fix non product build
git-svn-id: http://pubsvn.inavare.net/openscada/modules/atlantis/trunk@3923 1b50e8ee-deed-0310-b1de-ab401e1c4d63